service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ai0917-backend-svc
  namespace: default
spec:
  type: ClusterIP
  selector:
    app: ai0917-backend
  ports:
    - port: 80
      targetPort: 8080
